Fix e2e test error

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:ci": "next dev",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
