--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Rebuild native dependencies
+        run: npm rebuild lightningcss
+
       - name: Copy example .env if present
         run: |
           if [ -f .env.example ]; then
@@ -120,10 +123,10 @@ jobs:
           COVERAGE=${{ needs.test.outputs.coverage_percent }}
           echo "Reported coverage: ${COVERAGE}%"
           if [ "$COVERAGE" != "N/A" ] && (( $(echo "$COVERAGE < 80" | bc -l) )); then
-            echo "❌ Coverage below threshold (80%)."
+            echo " Coverage below threshold (80%)."
             exit 1
           else
-            echo "✅ Coverage meets minimum threshold."
+            echo " Coverage meets minimum threshold."
           fi
 
   e2e:
