--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,8 +40,16 @@ jobs:
           node-version: 22
           cache: "npm"
 
+      - name: Ensure optional deps & scripts are enabled
+        run: |
+          npm config set optional true
+          npm config set ignore-scripts false
+
       - name: Install dependencies
         run: npm ci
+      
+      - name: Verify lightningcss installed
+        run: node -e "require('lightningcss'); console.log('lightningcss OK on', process.platform, process.arch)"
 
       - name: Copy example .env if present
         run: |
@@ -155,6 +163,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
+
+      - name: Ensure optional deps & scripts are enabled
+        run: |
+          npm config set optional true
+          npm config set ignore-scripts false
 
       - name: Install dependencies
         run: npm ci
