--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --include=optional
-      
+
+      - name: Rebuild native dependencies
+        run: npm rebuild lightningcss
+
       - name: Copy example .env if present
         run: |
           if [ -f .env.example ]; then
@@ -82,8 +85,6 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
-          NEXT_DISABLE_LIGHTNINGCSS: 1
-          NEXT_TELEMETRY_DISABLED: 1
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
 
@@ -91,8 +92,6 @@ jobs:
         run: npm run test:e2e
         env:
           NODE_ENV: test
-          NEXT_DISABLE_LIGHTNINGCSS: 1
-          NEXT_TELEMETRY_DISABLED: 1
           BASE_URL: http://localhost:3000
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
