--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,14 +40,8 @@ jobs:
           node-version: 22
           cache: "npm"
 
-      - name: Ensure install runs postinstall scripts
-        run: npm config set ignore-scripts false
-
       - name: Install dependencies
-        run: npm ci --include=optional
-
-      - name: Rebuild native dependencies
-        run: npm rebuild lightningcss
+        run: npm ci
 
       - name: Copy example .env if present
         run: |
@@ -158,11 +152,8 @@ jobs:
         with:
           node-version: 22
 
-      - name: Ensure install runs postinstall scripts
-        run: npm config set ignore-scripts false
-
       - name: Install dependencies
-        run: npm ci --include=optional
+        run: npm ci
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
@@ -171,8 +162,6 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
-          NEXT_DISABLE_LIGHTNINGCSS: 1
-          NEXT_TELEMETRY_DISABLED: 1
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
 
@@ -180,8 +169,6 @@ jobs:
         run: npm run test:e2e
         env:
           NODE_ENV: test
-          NEXT_DISABLE_LIGHTNINGCSS: 1
-          NEXT_TELEMETRY_DISABLED: 1
           BASE_URL: http://localhost:3000
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
