--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,20 @@
 name: Run Tests and Verify Coverage
 
 on:
-  push:
-    branches: ["**"]
-  pull_request:
-    branches: ["**"]
-    types: [opened, synchronize, reopened]
-  workflow_dispatch:
+  push:
+    branches: ["**"]
+  pull_request:
+    branches: ["**"]
+    types: [opened, synchronize, reopened]
+  workflow_dispatch:
 
 jobs:
-  test:
-    name: Run Unit & Integration Tests
-    runs-on: ubuntu-latest
+  test:
+    name: Run Unit & Integration Tests
+    runs-on: ubuntu-latest
 
-    outputs:
-      coverage_percent: ${{ steps.extract_coverage.outputs.coverage_percent }}
+    outputs:
+      coverage_percent: ${{ steps.extract_coverage.outputs.coverage_percent }}
 
     services:
       postgres:
@@ -30,38 +30,38 @@ jobs:
           --health-timeout 5s 
           --health-retries 5
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Copy example .env if present
-        run: |
-          if [ -f .env.example ]; then
-            cp .env.example .env
-          else
-            echo ".env.example not found, skipping..."
-          fi
+      - name: Copy example .env if present
+        run: |
+          if [ -f .env.example ]; then
+            cp .env.example .env
+          else
+            echo ".env.example not found, skipping..."
+          fi
 
-      - name: Run database migrations (Supabase)
-        uses: supabase/setup-cli@v1
-        with:
-          version: latest
-        continue-on-error: true
-      - run: supabase db push || echo "Skipping local migration if not needed"
+      - name: Run database migrations (Supabase)
+        uses: supabase/setup-cli@v1
+        with:
+          version: latest
+        continue-on-error: true
+      - run: supabase db push || echo "Skipping local migration if not needed"
 
-      - name: Run Unit Tests with Coverage
-        run: npm run test:coverage
-        env:
-          NODE_ENV: test
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
+      - name: Run Unit Tests with Coverage
+        run: npm run test:coverage
+        env:
+          NODE_ENV: test
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
 
       - name: Run Integration Tests (API, Supabase)
         run: npm test
@@ -112,11 +112,21 @@ jobs:
               body
             });
 
-  validate_coverage:
-    name: Validate Coverage Threshold
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'pull_request'
+      - name: Post coverage comment to PR
+        uses: actions/github-script@v7
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          script: |
+            const coverage = process.env.COVERAGE_PERCENT || 'N/A';
+            const color = coverage < 50 ? 'red' : coverage < 80 ? 'yellow' : 'brightgreen';
+            const badge = `![Coverage](https://img.shields.io/badge/coverage-${coverage}%25-${color})`;
+            const body = `${badge}\n\n> **Unit + Integration coverage:** ${coverage}%`;
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body
+            });
 
     steps:
       - name: Validate minimum coverage (80%)
@@ -130,25 +140,35 @@ jobs:
             echo "Coverage meets minimum threshold."
           fi
 
-  e2e:
-    name: End-to-End Tests (Playwright)
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Validate minimum coverage (80%)
+        run: |
+          COVERAGE=${{ needs.test.outputs.coverage_percent }}
+          echo "Reported coverage: ${COVERAGE}%"
+          if [ "$COVERAGE" != "N/A" ] && (( $(echo "$COVERAGE < 80" | bc -l) )); then
+            echo " Coverage below threshold (80%)."
+            exit 1
+          else
+            echo " Coverage meets minimum threshold."
+          fi
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  e2e:
+    name: End-to-End Tests (Playwright)
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
 
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
+      - name: Install dependencies
+        run: npm ci
 
       - name: Build Next.js app
         run: npm run build
