--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,6 +82,7 @@ jobs:
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
 
       - name: Run End-to-End Tests (Playwright)
+        if: ${{ hashFiles('e2e/**') != '' }}
         run: npm run test:e2e
         env:
           NODE_ENV: test
