--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.74.0",
     "@tailwindcss/postcss": "^4.1.16",
+    "lucide-react": "^0.552.0",
     "next": "15.5.3",
     "pdfjs-dist": "^5.4.296",
     "react": "19.1.0",
