--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:coverage:open": "jest --coverage && open coverage/lcov-report/index.html",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.74.0",
+    "lucide-react": "^0.548.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
