--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.74.0",
     "@tailwindcss/postcss": "^4.1.16",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.552.0",
     "next": "15.5.3",
     "pdfjs-dist": "^5.4.296",
