--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@tailwindcss/postcss": "^4.1.16",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.552.0",
-    "next": "15.5.3",
+    "next": "^15.5.7",
     "pdfjs-dist": "^5.4.296",
     "react": "19.1.0",
     "react-dom": "19.1.0",
